<resources>
    <string name="app_name">移动考勤</string>
    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="go">登录</string>

    <string name="clickmelogin"><u>点我登录</u></string>
    <string name="clickmelogout"><u>点我注销</u></string>

    <!-- DynamicBoxUtil -->
    <string name="load_ing">加载中···</string>
    <string name="load_error">加载数据出错</string>
    <string name="msg_read_detail_fail">无法获取网络数据，请刷新重试...</string>

    <!-- activity_feedback_layout -->
    <string name="suggestion">意见或建议</string>
    <string name="phone">手机号：</string>
    <string name="optional">选填</string>
    <string name="submit_feedback">提交反馈</string>

    <!-- BaseUpdateService -->
    <string name="updating">正在更新</string>
    <string name="close">关闭</string>
    <string name="cancle">取消</string>

    <!-- DefaultDownloadService -->
    <string name="install">安装</string>
    <string name="update">更新</string>
    <string name="is_immediately_install">已为您准备好新的版本,立刻安装?</string>
    <string name="find_new_version">发现新版本</string>

    <!-- activity_feedback_layout -->
    <string name="feedback_tips">客服电话：13691047175 \n 邮箱：ningrongrong@bjzjmy.com</string>
    <string name="bind_notice">绑定设备后,该账号只能在本设备上使用\n有效保障账号安全</string>
</resources>
