<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

   <include
           android:id="@+id/abl_bar"
           layout="@layout/appbar_layout"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abl_bar"
        android:layout_marginLeft="24dip"
        android:layout_marginTop="24dip"
        android:text="@string/suggestion"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dip"
        android:layout_marginTop="8dip"
        android:background="@drawable/border_line"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:clickable="true"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:paddingBottom="8dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="8dip"
                android:textColor="#000000"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dip">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone" />

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/optional"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_content"
        android:layout_margin="24dip"
        android:background="@drawable/shape_border_black"
        android:padding="12dp"
        android:text="@string/submit_feedback"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center"
        android:lineSpacingExtra="5dip"
        android:text="@string/feedback_tips"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />
</RelativeLayout>