<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="50dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#c5c5c5">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:paddingBottom="2dp"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#c5c5c5">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingBottom="2dp"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/circular_shape"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:text="@string/go"
        android:textColor="#FDFEF3"></Button>
</LinearLayout>